--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "d3": "^5.15.0",
     "d3-color": "^1.4.0",
+    "json-formatter-js": "^2.2.1",
     "lodash": "^4.17.15",
     "sirv-cli": "^0.4.4"
   }
