--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "d3-color": "^1.4.0",
     "json-formatter-js": "^2.2.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "sirv-cli": "^0.4.4"
   }
 }
